--- a/MLExportServlet/WebContent/WEB-INF/web.xml
+++ b/MLExportServlet/WebContent/WEB-INF/web.xml
@@ -13,19 +13,19 @@
 <env-entry> 
     <env-entry-name>ml.xcc.urlcount</env-entry-name>
     <env-entry-type>java.lang.Integer</env-entry-type>
-    <env-entry-value>1</env-entry-value> 
+    <env-entry-value>2</env-entry-value> 
 </env-entry>
   
 <env-entry> 
     <env-entry-name>ml.xcc.url1</env-entry-name>
     <env-entry-type>java.lang.String</env-entry-type>
-    <env-entry-value>xdbc://admin:admin@localhost:9003/samples</env-entry-value> 
+    <env-entry-value>xdbc://username:password@localhost:9003/samples</env-entry-value> 
 </env-entry>
 
 <env-entry> 
     <env-entry-name>ml.xcc.url2</env-entry-name>
     <env-entry-type>java.lang.String</env-entry-type>
-    <env-entry-value>xdbc://admin:admin@localhost:9004/samples</env-entry-value> 
+    <env-entry-value>xdbc://username:password@localhost:9004/samples</env-entry-value> 
 </env-entry>
 
 </web-app>
